--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <span style="color: red">H</span><span style="color: blue">V</span><span style="color: yellow">6</span><span
                 style="color: green">4</span>
         </h1>
+        <div class="hv64">
+            <img class="mario" id="hv64" src="img/hv64-real.png">
+        </div>
         <h6 style="color: red;">
             Random Color Code Generator
         </h6>
@@ -67,7 +70,7 @@
                         <p>Randomize Color:</p>
                         <button class="button2" type="button" id="changeCols" onclick="genDifColorHair()"><span>Change
                                 Mario</span></button>
-                        <img class="mario" id="hair" src="img/hair.png" width="100" height="170">
+                        <img class="mario" id="hair" src="img/hair.png">
                     </center>
                 </div>
             </div>
@@ -93,7 +96,7 @@
             </div>
 
             <div class="column">
-                <div class="blob" style="height: 660px;">
+                <div class="blob" style="height: 770px;">
                     <h2>Your Code:</h2>
                     <button class="button2" onclick="generateUSA()"><span>Generate (NTSC-U)</span></button>
                     <button class="button2" onclick="generateJAP()"><span>Generate (NTSC-J)</span></button>
