--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
         <div class="row">
             <div class="column">
                 <div class="blob">
-                    <center>
+                    <center class="hash">
+                        <span class="testo" id="color"></span>
                         <h2>Overalls</h2>
-                        <p>Randomize Color:</p>
-                        <button class="button2" type="button" id="changeCols"
-                            onclick="genDifColorOveralls()"><span>Change
+
+                        <button class="button2" type="button" id="chOver" onclick="genDifColorOveralls()"><span>Change
                                 Mario</span></button>
-                        <img class="mario" id="overalls" src="img/overalls.png">
+                        <img class="mario testo" id="overalls" src="img/overalls.png">
                     </center>
                 </div>
                 <div class="blob">
-                    <center>
+                    <center class="hash">
                         <h2>Hat and Shirt</h2>
-                        <p>Randomize Color:</p>
-                        <button class="button2" type="button" id="changeCols" onclick="genDifColorHat()"><span>Change
+
+                        <button class="button2" type="button" id="chHat" onclick="genDifColorHat()"><span>Change
                                 Mario</span></button>
                         <img class="mario" id="hat" src="img/logo.png">
                     </center>
@@ -56,19 +56,19 @@
             </div>
             <div class="column">
                 <div class="blob">
-                    <center>
+                    <center class="hash">
                         <h2>Face</h2>
-                        <p>Randomize Color:</p>
-                        <button class="button2" type="button" id="changeCols" onclick="genDifColorFace()"><span>Change
+
+                        <button class="button2" type="button" id="chFace" onclick="genDifColorFace()"><span>Change
                                 Mario</span></button>
-                        <img class="mario" id="face" src="img/face.png">
+                        <img class="mario" id="face" src="img/face.png" style="background-color:pink">
                     </center>
                 </div>
                 <div class="blob">
-                    <center>
+                    <center class="hash">
                         <h2>Hair</h2>
-                        <p>Randomize Color:</p>
-                        <button class="button2" type="button" id="changeCols" onclick="genDifColorHair()"><span>Change
+
+                        <button class="button2" type="button" id="chHair" onclick="genDifColorHair()"><span>Change
                                 Mario</span></button>
                         <img class="mario" id="hair" src="img/hair.png">
                     </center>
@@ -76,19 +76,19 @@
             </div>
             <div class="column">
                 <div class="blob">
-                    <center>
+                    <center class="hash">
                         <h2>Gloves</h2>
-                        <p>Randomize Color:</p>
-                        <button class="button2" type="button" id="changeCols" onclick="genDifColorGloves()"><span>Change
+
+                        <button class="button2" type="button" id="chGloves" onclick="genDifColorGloves()"><span>Change
                                 Mario</span></button>
                         <img class="mario" id="gloves" src="img/gloves.png">
                     </center>
                 </div>
                 <div class="blob">
-                    <center>
+                    <center class="hash">
                         <h2>Shoes</h2>
-                        <p>Randomize Color:</p>
-                        <button class="button2" type="button" id="changeCols" onclick="genDifColorShoes()"><span>Change
+
+                        <button class="button2" type="button" id="chShoes" onclick="genDifColorShoes()"><span>Change
                                 Mario</span></button>
                         <img class="mario" id="shoes" src="img/shoes.png">
                     </center>
