--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <button class=" button2" type="button" id="chOver" onclick="genDifColorOveralls()"><span>Change
                                 Mario</span></button>
                         <img class="mario testo" id="overalls" src="img/overalls.png">
-                        <h1 class="testo" id="colorsp"></h1>
+                        <h1 class="testo" id="colorsp">#000000</h1>
 
                     </center>
                 </div>
@@ -49,8 +49,8 @@
                         <h2>Hat and Shirt</h2>
                         <button class="button2" type="button" id="chHat" onclick="genDifColorHat()"><span>Change
                                 Mario</span></button>
-                        <img class="mario testo" id="hat" src="img/logo.png">
-                        <h1 class="testo" id="colorsp2"></h1>
+                        <img class="mario testo2" id="hat" src="img/logo.png">
+                        <h1 class="testo2" id="colorsp2"></h1>
                     </center>
                 </div>
             </div>
@@ -61,8 +61,8 @@
 
                         <button class="button2" type="button" id="chFace" onclick="genDifColorFace()"><span>Change
                                 Mario</span></button>
-                        <img class="mario testo" id="face" src="img/face.png" style="background-color:pink">
-                        <h1 class="testo" id="colorsp3"></h1>
+                        <img class="mario testo3" id="face" src="img/face.png" style="background-color:pink">
+                        <h1 class="testo3" id="colorsp3"></h1>
                     </center>
                 </div>
                 <div class="blob">
@@ -71,8 +71,8 @@
 
                         <button class="button2" type="button" id="chHair" onclick="genDifColorHair()"><span>Change
                                 Mario</span></button>
-                        <img class="mario testo" id="hair" src="img/hair.png">
-                        <h1 class="testo" id="colorsp4"></h1>
+                        <img class="mario testo4" id="hair" src="img/hair.png">
+                        <h1 class="testo4" id="colorsp4"></h1>
                     </center>
                 </div>
             </div>
@@ -83,8 +83,8 @@
 
                         <button class="button2" type="button" id="chGloves" onclick="genDifColorGloves()"><span>Change
                                 Mario</span></button>
-                        <img class="mario testo" id="gloves" src="img/gloves.png">
-                        <h1 class="testo" id="colorsp5"></h1>
+                        <img class="mario testo5" id="gloves" src="img/gloves.png">
+                        <h1 class="testo5" id="colorsp5"></h1>
                     </center>
                 </div>
                 <div class="blob">
@@ -93,8 +93,8 @@
 
                         <button class="button2" type="button" id="chShoes" onclick="genDifColorShoes()"><span>Change
                                 Mario</span></button>
-                        <img class="mario testo" id="shoes" src="img/shoes.png">
-                        <h1 class="testo" id="colorsp6"></h1>
+                        <img class="mario testo6" id="shoes" src="img/shoes.png">
+                        <h1 class="testo6" id="colorsp6"></h1>
                     </center>
                 </div>
             </div>
