--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
             <div class="hv64">
                 <img class="mario" id="hv64" src="img/hv64-real.png">
             </div>
+
             <h6 style="color: red;">
                 Random Color Code Generator
             </h6>
             <h6 style="color: yellow;">
                 Yellow Submarine Channel
             </h6>
+            <div class="ytb">
+                <a href="https://www.youtube.com/channel/UCAgrnbVMDp3adyeq-VH394g" target="_blank"><img class="youtube"
+                        id="youtube" src="img/ytube.png" style="width:220px"></a>
+            </div>
         </div>
 
         <div class="content">
@@ -39,7 +44,7 @@
                             <h2>Overalls</h2>
                             <button class="button2" type="button" id="chOver"><span>Change Mario</span></button>
                             <img class="mario testo" id="overalls" src="img/overalls.png">
-                            <div>
+                            <div class='color'>
                                 <h1 class="testo" id="colorsp" style="background-color:white">#000000</h1>
                             </div>
 
@@ -51,8 +56,8 @@
                             <h2>Hat and Shirt</h2>
                             <button class="button2" type="button" id="chHat"><span>Change
                                     Mario</span></button>
-                            <img class="mario testo" id="hat" src="img/logo.png">
-                            <div>
+                            <img class=" mario testo" id="hat" src="img/logo.png">
+                            <div class='color'>
                                 <h1 class="testo" id="colorsp2" style="background-color:white">#000000</h1>
                             </div>
                         </center>
@@ -65,7 +70,7 @@
                             <button class="button2" type="button" id="chFace"><span>Change
                                     Mario</span></button>
                             <img class="mario testo" id="face" src="img/face.png">
-                            <div>
+                            <div class='color'>
                                 <h1 class="testo" id="colorsp3" style="background-color:white">#000000</h1>
                             </div>
                         </center>
@@ -77,7 +82,7 @@
                             <button class="button2" type="button" id="chHair"><span>Change
                                     Mario</span></button>
                             <img class="mario testo" id="hair" src="img/hair.png">
-                            <div>
+                            <div class='color'>
                                 <h1 class="testo" id="colorsp4" style="background-color:white">#000000</h1>
                             </div>
                         </center>
@@ -90,7 +95,7 @@
                             <button class="button2" type="button" id="chGloves"><span>Change
                                     Mario</span></button>
                             <img class="mario testo" id="gloves" src="img/gloves.png">
-                            <div>
+                            <div class='color'>
                                 <h1 class="testo" id="colorsp5" style="background-color:white">#000000</h1>
                             </div>
                         </center>
@@ -102,7 +107,7 @@
                             <button class="button2" type="button" id="chShoes"><span>Change
                                     Mario</span></button>
                             <img class="mario testo" id="shoes" src="img/shoes.png">
-                            <div>
+                            <div class='color'>
                                 <h1 class="testo" id="colorsp6" style="background-color:white">#000000</h1>
                             </div>
                         </center>
@@ -116,7 +121,7 @@
                         <button class="button2" onclick="generateJAP()"><span>Generate (NTSC-J)</span></button>
                         <button class="button2" onclick="generatePAL()"><span>Generate (PAL)</span></button>
                         <button class="button2" onclick="generateSHI()"><span>Generate (Shindou)</span></button>
-                        <p id="type">Click one of the buttons above once you've chosen your colours!</p>
+                        <p id="type">Click one of the buttons above once you've chosen your colors!</p>
                         <textarea id="code" readonly></textarea>
                         <button class="button2" onclick="reset()"><span>Reset Mario</span></button>
                     </div>
