--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <br>
                 Version 1.1.1 (08/03/22)
                 <br>
-                Credit and shout outs to Mind2Digital
+                Credit and shout outs to Simpleflips, Mind2Digital and Yellow Submarine Youtube Channel
             </p>
         </div>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
