--- a/index.html
+++ b/index.html
@@ -15,20 +15,29 @@
 
     <body id="body">
         <div class="header">
-            <h1>
+            <!-- <h1>
                 <span style="color: red">H</span><span style="color: blue">V</span><span
                     style="color: yellow">6</span><span style="color: green">4</span>
             </h1>
             <div class="hv64">
                 <img class="mario" id="hv64" src="img/hv64-real.png">
-            </div>
+            </div> -->
 
-            <h6 style="color: red;">
-                Random Color Code Generator
-            </h6>
-            <h6 style="color: yellow;">
+
+            <h1>
+                <span style="color: red">R</span><span style="color: blue">A</span><span
+                    style="color: yellow">N</span><span style="color: blue">D</span><span
+                    style="color: green">O</span><span style="color: blue">M</span>
+
+                <span style="color: green">C</span><span style="color: yellow">o</span><span
+                    style="color: red">l</span><span style="color: green">o</span><span style="color: red">r</span>
+            </h1>
+            <h2 style="color: blue;">
+                Code Generator
+            </h2>
+            <h2 class="ChName" style="color: yellow;">
                 Yellow Submarine Channel
-            </h6>
+            </h2>
             <div class="ytb">
                 <a href="https://www.youtube.com/channel/UCAgrnbVMDp3adyeq-VH394g" target="_blank"><img class="youtube"
                         id="youtube" src="img/ytube.png" style="width:220px"></a>
