--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                         <p id="type">Click one of the buttons above once you've chosen your colors!</p>
                         <textarea id="code" readonly></textarea>
                         <button class="button2" onclick="reset()"><span>Reset Mario</span></button>
+                        <button class="button2" onclick="copyText()"><span>Copy your Code</span></button>
                     </div>
                 </div>
             </div>
