--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 Yellow Submarine Channel
             </h2>
             <div class="ytb">
-                <a href="https://www.youtube.com/channel/UCAgrnbVMDp3adyeq-VH394g" target="_blank"><img class="youtube"
-                        id="youtube" src="img/ytube.png" style="width:220px"></a>
+                <a href="https://www.youtube.com/channel/UCAgrnbVMDp3adyeq-VH394g?sub_confirmation=1"
+                    target="_blank"><img class="youtube" id="youtube" src="img/ytube.png" style="width:220px"></a>
             </div>
         </div>
 
